feat: inclusao sqlite

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint": "^8.46.0",
     "glob": "^10.3.3",
     "signale": "^1.4.0",
+    "sqlite": "^5.0.1",
+    "sqlite3": "^5.1.6",
     "tslib": "^2.5.3"
   }
 }
