--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@magicyan/discord": "^1.0.3",
+    "axios": "^1.5.1",
     "chalk": "^4.1.2",
     "discord.js": "^14.13.0",
     "dotenv": "^16.1.3",
