inicio correcoes producao

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BOT_TOKEN=MTE1Njc5MDI1MTQ5OTU2OTE5NQ.GQZtaT.gnBK9b-Dnw9TaJfvP6uCzFVgQmlmA_Q3Qy1Nq0
-NODE_ENV=producao #producao / desenvolvimento
+NODE_ENV=desenvolvimento #producao / desenvolvimento
