--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node .",
     "dev": "ts-node -r tsconfig-paths/register --transpiler sucrase/ts-node-plugin src/index.ts",
     "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist"
-    },
+  },
   "keywords": [
     "bot",
     "discord"
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/signale": "^1.4.4",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "dotenv-cli": "^7.3.0",
@@ -34,6 +35,7 @@
     "signale": "^1.4.0",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6",
-    "tslib": "^2.5.3"
+    "tslib": "^2.5.3",
+    "uuid": "^9.0.1"
   }
 }
